--- a/style.css
+++ b/style.css
@@ -206,3 +206,66 @@ footer {
   text-align: center;
   margin-top: 32px;
 }
+
+/* media queries */
+/* min, max, <> */
+/* @media (min-width: 992px) {
+@media (max-width: 992px) {
+    .global {
+        background-color: blue;
+     
+        padding: 10px;
+    }
+
+/* mobile devies 550px */
+/* @media (max-width: 550px) {
+    .global {
+       
+        display: none; */
+
+/* ipad view 992px */
+
+@media (width < 992px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.articles {
+  width: 100%;
+}
+
+.side-links {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+}
+.side-links > div {
+  flex-grow: 1;
+}
+
+/* phones 550px */
+
+/* media (width <550px) {} */
+
+@media (max-width: 550px) {
+  article {
+    display: flex;
+    flex-direction: column;
+  }
+  article .art-img {
+    width: 100%;
+  }
+  .btn {
+    width: 100%;
+  }
+  .side-links {
+    display: flex;
+    flex-direction: column;
+  }
+  .subs form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
